--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Websocket with Rust</title>
-    <style>
-        ul,
-        li {
-            list-style-type: none;
-        }
-
-        li {
-            padding-left: 2em;
-            text-indent: -2em;
-        }
-
-        .error {
-            color: red;
-        }
-
-        .box {
-            overflow: scroll;
-            -webkit-overflow-scrolling: touch;
-            overflow-y: scroll;
-            overflow-x: hidden;
-            height: 100px;
-            background: grey;
-            color: white;
-        }
-
-        .container {
-            display: flex;
-        }
-
-        #input {
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -56,70 +24,7 @@
     </div>
 
     <button onclick="initWs()">Restart connection</button>
-
-    <script>
-        const errorMsg = document.querySelector(".error");
-        const data = document.querySelector("#data");
-        const input = document.querySelector("#input");
-        const btn = document.querySelector("#btn");
-
-        const initWs = () => {
-            if (window.ws) ws.close();
-            window.ws = new WebSocket("ws://127.0.0.1:3012");
-
-            ws.onopen = (event) => {
-                console.log("CONNECTED");
-
-                ws.onmessage = function (event) {
-                    console.log(event.data);
-                    data.innerHTML += `<li>${event.data}</li>`;
-                    const option = {
-                        body: event.data
-                    }
-                    new Notification("New Message!", option);
-                }
-            };
-        }
-        initWs();
-
-        const sendMsg = () => {
-            errorMsg.textContent = "";
-            const t = input.value;
-            if (t && ws.readyState !== ws.CLOSED) {
-                try {
-                    window.ws.send(t);
-                    input.value = "";
-                } catch (err) {
-                    errorMsg.textContent = `Error on websocket connection: ${error}`;
-                }
-            } else {
-                errorMsg.textContent = `Websocket is closed`;
-            }
-        }
-        btn.addEventListener("click", () => {
-            sendMsg();
-        })
-        input.addEventListener("keyup", (event) => {
-            event.preventDefault();
-            if (event.keyCode === 13) {
-                sendMsg();
-            }
-        });
-
-        const notifyMe = () => {
-            if (!("Notification" in window)) {
-                console.error("This browser does not support desktop notification");
-            } else if (Notification.permission === "granted") {} else if (Notification.permission !== "denied") {
-                Notification.requestPermission().then(function (permission) {
-                    if (permission === "granted") {
-                        var notification = new Notification("Thank you!");
-                    }
-                });
-            }
-        }
-
-        notifyMe()
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
